Kafka consumer using sarama consumer api is working

--- a/resources/application.yaml
+++ b/resources/application.yaml
@@ -1,7 +1,15 @@
 kafka:
-  host: "localhost"
+  host: localhost
   port: 9092
   topic: content
+  group-id: hangout-storage-service
+
 log:
   level: debug
-  backend: slog
+  backend: zerolog
+
+hangout:
+  media:
+    upload-path: /home/soumalya/Development/Hangout/shared-path
+    queue-length: 100
+  
