added a worker pool to process file and a base context that would control the lifecycle of all the go routines and help them shutdown gracefully

--- a/resources/application.yaml
+++ b/resources/application.yaml
@@ -12,4 +12,6 @@ hangout:
   media:
     upload-path: /home/soumalya/Development/Hangout/shared-path
     queue-length: 100
+  worker-pool:
+    strength: 4
   
