--- a/resources/application.yaml
+++ b/resources/application.yaml
@@ -10,7 +10,8 @@ log:
 
 hangout:
   media:
-    upload-path: /home/soumalya/Development/Hangout/shared-path
+    upload-path: /media/soumalya/793f3da3-8908-48a8-a4ce-a638275951fa/hangout-upload-path
+    processed-path: /media/soumalya/793f3da3-8908-48a8-a4ce-a638275951fa/hangout-processed-path
     queue-length: 100
   worker-pool:
     strength: 4
