--- a/resources/application.yaml
+++ b/resources/application.yaml
@@ -8,9 +8,12 @@ log:
   level: debug
   backend: zerolog
 
-path:
-    upload: /media/soumalya/793f3da3-8908-48a8-a4ce-a638275951fa/hangout-upload-path
-    storage: /media/soumalya/793f3da3-8908-48a8-a4ce-a638275951fa/hangout-storage-path
+minio:
+    base-url: http://localhost:9000
+    access-key: vLmiqXs8DUB2jwocd14W
+    secret-key: mK5ByFQJKbm2nsjBvyLmkggITrP0sdfSPbspvr45
+    upload-bucket: hangout-upload-path
+    storage-bucket: hangout-storage-path
     
 process:
     queue-length: 100
